Props para los single Cards

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,19 @@
 .like{
     margin-left:91px;
 }
+
+
+
+.navbar{
+    width:70vw;
+}
+
+
+.divider{
+    height:2px;
+
+}
+.singlePeople{
+    width: 70vw;
+
+}
