hay que implementar los favoritos

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,8 +11,20 @@
 
 .like{
     margin-left:91px;
+    background-color: white;
+    
 }
+.like:hover {
+    background-color: #E4A11B;
+  }
 
+  .fa-heart{
+    color:#E4A11B;
+    
+}
+  .like:hover .fa-heart { 
+    color: rgb(158, 4, 4);
+  }
 
 
 .navbar{
