lista favs operacion ternaria

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,17 @@
   }
 
 
+.noFaved{
+    background-color: transparent;
+}
+
+.faved{
+    background-color: rgb(252, 0, 0);
+}
+
+
+
+
 .navbar{
     width:70vw;
 }
